--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,17 @@
+
 .about-container {
     text-align: center;
+    margin: 48px 48px;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
+    margin-top: 38px;
+    background-color: #f7f4ff;
+border-radius: 10px;
+border: 1px solid #885df1;
 }
 .container {
     text-align: center;
+}
+.navbar {
+    background-color: #885df1;
 }
